# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
gendiff/: booleans_cleaner.py  clean_booleans.py  cli.py  create_diff.py  diff.py  formats.py  gen_diff.py  generate_diff.py  get_data.py  recognize.py
gendiff/formatters/: json_formatter.py  plain_formatter.py
gendiff/scripts/: gendiff.py  gendiff_1.py  generate_diff.py  json_formatter.py  main.py  plain.py  stylish.py
gendiff_project/: __init__.py
gendiff_project/formatters/: json_formatter.py
gendiff_project/scripts/: gendiff.py  main.py
tests/: test.py  test_gendiff.py
