[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "CLI utility to find diff between 2 files"
authors = ["Igor Loskutov <omfi017@gmail.com>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"]
packages = [{include = "gendiff_project"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
pyyaml = "^6.0"
flake8 = "^5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
